api for room players
